--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ahusic <ahusic@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/18 20:11:05 by ahusic            #+#    #+#              #
-#    Updated: 2024/04/02 16:31:04 by ahusic           ###   ########.fr        #
+#    Updated: 2024/09/20 13:49:30 by ahusic           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,13 +20,13 @@ PRINTF_DIR = printf_src
 LIBFT_DIR = libft_src
 
 LIBFT_SRCS = $(addprefix $(LIBFT_DIR)/, \
-		ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c fT_isalpha.c \
+		ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 		ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c \
 		ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c \
-		ft_memset.c ft_putchar_fd.c ft_putendl.c ft_putnbr_fd.c \
+		ft_memset.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
 		ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c \
 		ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c \
-		ft_strlen.c ft_strmampi.c ft_strncmp.c ft_strnstr.c \
+		ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strnstr.c \
 		ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c)
 
 GNL_SRCS = $(addprefix $(GNL_DIR)/, \
